; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_chunk.c_chunks_return_srf.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_chunk.c_chunks_return_srf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i64, i64 }
%struct.TYPE_7__ = type { i32 }

@TYPEFUNC_SCALAR = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_FEATURE_NOT_SUPPORTED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [75 x i8] c"function returning record called in context that cannot accept type record\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @chunks_return_srf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @chunks_return_srf(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_7__**, align 8
  store i32 %0, i32* %3, align 4
  %8 = call i64 (...) @SRF_IS_FIRSTCALL()
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %22

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = call i64 @get_call_result_type(i32 %11, i32* null, i32* %6)
  %13 = load i64, i64* @TYPEFUNC_SCALAR, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %21

15:                                               ; preds = %10
  %16 = load i32, i32* @ERROR, align 4
  %17 = load i32, i32* @ERRCODE_FEATURE_NOT_SUPPORTED, align 4
  %18 = call i32 @errcode(i32 %17)
  %19 = call i32 @errmsg(i8* getelementptr inbounds ([75 x i8], [75 x i8]* @.str, i64 0, i64 0))
  %20 = call i32 @ereport(i32 %16, i32 %19)
  br label %21

21:                                               ; preds = %15, %10
  br label %22

22:                                               ; preds = %21, %1
  %23 = call %struct.TYPE_6__* (...) @SRF_PERCALL_SETUP()
  store %struct.TYPE_6__* %23, %struct.TYPE_6__** %4, align 8
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  store i64 %26, i64* %5, align 8
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 2
  %29 = load i64, i64* %28, align 8
  %30 = inttoptr i64 %29 to %struct.TYPE_7__**
  store %struct.TYPE_7__** %30, %struct.TYPE_7__*** %7, align 8
  %31 = load i64, i64* %5, align 8
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 1
  %34 = load i64, i64* %33, align 8
  %35 = icmp ult i64 %31, %34
  br i1 %35, label %36, label %45

36:                                               ; preds = %22
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %38 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %7, align 8
  %39 = load i64, i64* %5, align 8
  %40 = getelementptr inbounds %struct.TYPE_7__*, %struct.TYPE_7__** %38, i64 %39
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %40, align 8
  %42 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @SRF_RETURN_NEXT(%struct.TYPE_6__* %37, i32 %43)
  br label %48

45:                                               ; preds = %22
  %46 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %47 = call i32 @SRF_RETURN_DONE(%struct.TYPE_6__* %46)
  br label %48

48:                                               ; preds = %45, %36
  %49 = load i32, i32* %2, align 4
  ret i32 %49
}

declare dso_local i64 @SRF_IS_FIRSTCALL(...) #1

declare dso_local i64 @get_call_result_type(i32, i32*, i32*) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local %struct.TYPE_6__* @SRF_PERCALL_SETUP(...) #1

declare dso_local i32 @SRF_RETURN_NEXT(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @SRF_RETURN_DONE(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
